Levitation import of page 2488 rev 8606.

--- a/0-/GSoC:2009/Mentor Application.mediawiki
+++ b/0-/GSoC:2009/Mentor Application.mediawiki
@@ -15,8 +15,8 @@
 *What criteria do you use to select the members of your group? Please be as specific as possible.
 ** We select members based on their involvement in the community (time, code contributed, social involvement) and their availability over the course of the GSoC program. We have a pool of past mentors whom we know we can rely on, but new mentors are also welcome if they have proved their ability to supervise a project.
 *Has your group participated previously? If so, please summarize your involvement and any past successes and failures.  
-** We participated in the GSoC for the past three years and we feel that we achieved very successful outcomes. We also learned a lot during the process. During the first year, we had two very successful projects, two semi-successful ones and one failure. Last year, all projects reached their goals, although the produced code wasn't always in a releasable state. We took a more aggressive approach to student selection the second time, by discussing in depth with all the potential candidates about their interest, motivation and experience, as well as their proposed development roadmap. We believe that by asking the students to already provide the broad lines of their project (with milestones) in their proposal, serious candidates are more easily identified. The main issue we had last year was that projects weren't ready to be merged in the mainline, because there wasn't enough time to polish integration. This was a disappointment for both the student and the community. This year, we would like to focus on improving the ongoing quality of the code to ensure that it reaches a mergeable state by the end of the GSoC.
-*If your group has not previously participated, have you applied in the past? If so, for what sort of participation?  
+** We participated in the GSoC for the past three years and we feel that we achieved very successful outcomes. We also learned a lot during the process. There have of course been failures as well. These include disappearing students and failures to merge the topic-branches afterwards. Regarding disappearing students our plan is outlined below. The failure to merge the topic-branches when GSoC ends is going to be handled by the student merging smaller parts during the SoC instead of a huge patch in the end of the period.
+*If your group has not previously participated, have you applied in the past? If so, for what sort of participation?
 *What license does your organization use?
 **LGPL/GPL v2
 *What is the URL to the ideas list of your organization?
