--- a/0-/GSoC:2009/Mentor Application.mediawiki
+++ b/0-/GSoC:2009/Mentor Application.mediawiki
@@ -15,7 +15,7 @@
 *What criteria do you use to select the members of your group? Please be as specific as possible.
 ** We select members based on their involvement in the community (time, code contributed, social involvement) and their availability over the course of the GSoC program. We have a pool of past mentors whom we know we can rely on, but new mentors are also welcome if they have proved their ability to supervise a project.
 *Has your group participated previously? If so, please summarize your involvement and any past successes and failures.  
-** We participated in the GSoC for the past three years and we feel that we achieved very successful outcomes. We also learned a lot during the process. There have of course been failures as well. These include disappearing students and failures to merge the topic-branches afterwards. Regarding disappearing students our plan is outlined below. The failure to merge the topic-branches when GSoC ends is going to be handled by the student merging smaller parts during the SoC instead of a huge patch in the end of the period.
+** We participated in the GSoC for the past three years and we feel that we achieved very successful outcomes. We also learned a lot during the process. There have of course been failures as well. These include disappearing students and failures to merge the topic-branches afterwards. Regarding disappearing students our plan is outlined below. The failure to merge the topic-branches when GSoC ends is going to be handled by the student merging smaller parts during the SoC instead of a huge patch in the end of the period. We will also avoid letting students work on projects which depend on XMMS2 features that are not fully cooked and ready.
 *If your group has not previously participated, have you applied in the past? If so, for what sort of participation?
 *What license does your organization use?
 **LGPL/GPL v2
