Add some more info on effect project
Levitation import of page 2489 rev 8610.

--- a/0-/GSoC:2009/Proposed projects.mediawiki
+++ b/0-/GSoC:2009/Proposed projects.mediawiki
@@ -10,7 +10,7 @@ The following ideas are hints at possible projects that we would like to see in 
 
 {{SoCItem| title=XMMS2-specific GUI toolkit widgets (GTK+ or Qt)| description=XMMS2 clients developed for GTK+ or Qt often implement the same widgets for displaying playlists, media status, and the media library. This project would be to implement a set of widgets for developing an xmms2 client with one of the popular toolkits. The study of existing music players and an interest in HCI would be required. Advanced examples include: a rich medialib display (scriptable, see [http://www.foobar2000.org/ foobar2000]), a graphical editor for [[Collections_Concept | Collections]], cover art manager, preferences panel for changing configvals, etc.| lang=probably C or C++| level=Medium to Hard| mentor=N/A}}
 
-{{SoCItem| title=Effect chain clean-up and crossfade plugin| description=One of the most requested features is a cross-fade plugin. Right now cross-fade is not possible since effects (and all xform elements) are re-created for each song. Also the interface for enable and manage effect xforms is very clumsy. This SoC task is divided in three tasks. 1) create persistent xforms 2) revisit the effect configuration and 3) create a crossfade plugin.| lang=C| level=Medium| mentor=N/A}}
+{{SoCItem| title=Effect chain clean-up and crossfade plugin| description=One of the most requested features is a cross-fade plugin. Right now cross-fade is not possible since effects (and all xform elements) are re-created for each song. Also the interface for enable and manage effect xforms is very clumsy. This SoC task is divided in three tasks. 1) create persistent xforms 2) revisit the effect configuration and 3) create a crossfade plugin. This project could also investigate passing data in frequency domain in xform chain ([http://thread.gmane.org/gmane.comp.multimedia.xmms2.devel/1535/focus=1536 see this ml thread]). The following bugs are related: 908 820 2008| lang=C| level=Medium| mentor=N/A}}
 
 {{SoCItem| title=High-level clientlib (xmmsclient-easy)| description=Development of a higher-level client library, that would include features many clients have in common. Current ideas for xmmsclient-easy modules include: server state caching (playlist, metadata, playback status, etc), a new modular collection pattern parser, etc.| lang=C| level=Medium to Hard| mentor=N/A}}
 
