--- a/0-/GSoC:2009/Proposed projects.mediawiki
+++ b/0-/GSoC:2009/Proposed projects.mediawiki
@@ -29,4 +29,6 @@ The following ideas are hints at possible projects that we would like to see in 
 
 {{SoCItem| title=Logtable| description=We miss the log table, let's bring it back, maybe as a service client.| lang=C| level=Medium| mentor=N/A}}
 
-{{SoCItem| title=Rockbox sync| description=Needs description.| lang=C| level=Medium| mentor=N/A}}
+{{SoCItem| title=Rockbox sync| description=[[http://www.rockbox.org Rockbox]] is the super cool F/OSS firmware for your music player. It stores its metadata in
+an ondisk format called TagCache. This project would be to split the TagCache code from Rockbox out into a library, and then write a service client that given the
+mount point of a rockbox device and the name of a collection would merge that collection to the player. It should hopefully support updating the TagCache on the device, but that can also be done by having the device sync itself. It should also support removing all songs from an arbitrary collection from the device.| lang=C| level=Medium| mentor=N/A}}
